# bonjil

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  bonjil.toml.example  cspell-project-words.txt  cspell.json  justfile
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
baselines/: main.json
benches/: README.md
docs/: evaluation.md  implementation-plan.md  requirements.md  tasks.md
evaluation/: .gitignore  README.md  public-corpus-observations.md  public-corpus.md  tools.md
evaluation/methods/: benchmark.md  evaluation.md  fixture-design.md  source-research.md
evaluation/tool-runners/: README.md
evaluation/tool-runners/docling/: Dockerfile  run.py
evaluation/tool-runners/mammoth-js/: Dockerfile  run.mjs
evaluation/tool-runners/markitdown/: Dockerfile  run.py
evaluation/tool-runners/pandoc/: Dockerfile  run.sh
evaluation/tool-runners/pymupdf4llm/: Dockerfile  run.py
src/: lib.rs  main.rs
src/core/: ast.rs  config.rs  json.rs  mod.rs  naming.rs  options.rs  report.rs  text.rs
src/evaluation/: mod.rs
src/integrations/: llm.rs  media.rs  mod.rs  ocr.rs
src/parsers/: docx.rs  html.rs  mod.rs  pdf.rs
src/parsers/ooxml/: mod.rs  pptx.rs  xlsx.rs  xml.rs
src/pipeline/: converter.rs  input_detection.rs  media_refs.rs  mod.rs  report_features.rs
src/writers/: markdown.rs  mod.rs
tests/: corpus_eval.rs  eval.rs  integration.rs  ocr.rs  pdf.rs  thresholds.toml
tests/fixtures/: README.md
tests/fixtures/integration/: README.md
tests/fixtures/regression/: README.md
tools/eval/: README.md
(+25 files in other folders)
