[package]
name = "bonjil"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Distill rich documents into structured Markdown."

[lib]
name = "bonjil"
path = "src/lib.rs"

[[bin]]
name = "bonjil"
path = "src/main.rs"

[[bin]]
name = "bonjil-eval"
path = "tools/eval/bin/bonjil-eval.rs"

[[bin]]
name = "bonjil-compare-baseline"
path = "tools/eval/bin/bonjil-compare-baseline.rs"

[[bin]]
name = "bonjil-bench"
path = "tools/eval/bin/bonjil-bench.rs"

[[bin]]
name = "bonjil-corpus-eval"
path = "tools/eval/bin/bonjil-corpus-eval.rs"

[profile.release]
lto = true
strip = true
