[package]
name = "bonjil"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Distill rich documents into structured Markdown."

[lib]
name = "bonjil"
path = "src/lib.rs"

[[bin]]
name = "bonjil"
path = "src/main.rs"

[[bin]]
name = "bonjil-eval"
path = "evaluation/bin/bonjil-eval.rs"

[[bin]]
name = "bonjil-compare-baseline"
path = "evaluation/bin/bonjil-compare-baseline.rs"

[[bin]]
name = "bonjil-bench"
path = "evaluation/bin/bonjil-bench.rs"

[[bin]]
name = "bonjil-corpus-eval"
path = "evaluation/bin/bonjil-corpus-eval.rs"

[profile.release]
lto = true
strip = true

[dependencies]
lopdf = { version = "0.38.0", default-features = false }
pdf-extract = "0.10.0"
zip = "8.6.0"
